--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 <p id="genero">Genero:</p>
             </div>
             <div class="reproductorBotones">
-                <button><i class="fa-solid fa-backward"></i></button>
+                <button id="backward"><i class="fa-solid fa-backward"></i></button>
                 <button id="pause"><i class="fa-solid fa-pause"></i></button>
                 <button id="play"><i class="fa-solid fa-play"></i></button>
-                <button><i class="fa-solid fa-forward"></i></button>
+                <button id="foward"><i class="fa-solid fa-forward"></i></button>
                 <button id="stop"><i class="fa-solid fa-stop"></i></button>
                  <button id="mute"><i class="fa-solid fa-volume-xmark"></i></button>
             </div>
