--- a/index2.html
+++ b/index2.html
@@ -10,16 +10,15 @@
     <script src="https://kit.fontawesome.com/e86046f429.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <nav id ="barra">
-            <div>
-                 <input id="buscador" type="search" placeholder="Buscar"><button id="buscarBoton"><i class="fa-solid fa-magnifying-glass"></i></button>
-            </div>
-        <div><a href="login.html"><button id ="logout1">LOG OUT</button></a> 
-            </div>
-    </nav>
-        </header>
-    
+   <header>
+    <nav id ="barra">
+        <div>
+             <input id="buscador" type="search" placeholder="Buscar"><button id="buscarBoton"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+    <div><a href="login.html"><button id ="logout1">LOG OUT</button></a> 
+        </div>
+</nav>
+    </header>
 
     <main>
         
@@ -71,5 +70,6 @@
 
 </main>
  <script defer src="main.js"></script>
+ <script defer src="login.js"></script>
 </body>
 </html>
