--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
 
 </main>
- <script defer src="main.js"></script>
+<script defer src="main.js"></script>
+<script defer src="login.js"></script>
 </body>
 </html>
