--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
             </div>
 
-            <div id="MiPLaylist" class="listas">
+            <div id="listaMiPLaylist" class="listas">
                 <h2 class="titulos">Mi Playlist</h2>
                 <p>Cancion Playlist</p><button><i class="fa-solid fa-play"></i></button><button><i class="fa-solid fa-heart"></button></i><button><i class="fa-solid fa-trash"></i></button>
 
             </div>
 
-            <div id="misFavoritos" class="listas">
+            <div id="listaFavoritos" class="listas">
                 <h2 class="titulos">Favoritos</h2>
                 <p>Cancion 1</p><button><i class="fa-solid fa-play"></i><button><i class="fa-regular fa-heart"></i></button><button><i class="fa-solid fa-plus"></i></button>
               
